# IndieStudio

./: .editorconfig  .gitignore  Bite  BomberMan.b3d  CMakeLists.txt  Makefile  README.md  bomb.b3d  cube.b3d  entity.xml  myfont.xml  power_up.b3d
LuaScript/: ai.lua
gfx/: elfamoso1.mtl
irrKlang-64bit-1.5.0/examples/01.HelloWorld/: example
irrlicht-1.8.4/include/: IAttributeExchangingObject.h  ICursorControl.h  IDynamicMeshBuffer.h  IGUIElement.h  IMaterialRenderer.h  IMeshManipulator.h  ISceneNode.h  ISceneNodeAnimator.h  IShaderConstantSetCallBack.h  SAnimatedMesh.h  SSharedMeshBuffer.h  SSkinMeshBuffer.h  matrix4.h
src/: InputManager.cpp  InputManager.hh  MainMenu.cpp  MainMenu.hpp  Menu.cpp  Menu.hpp  OverMenu.cpp  OverMenu.hpp  RessourcesLocator.cpp  RessourcesLocator.hh  Scene.cpp  Scene.hh  ServiceLocator.hpp  SubMenu.cpp  SubMenu.hpp  SystemFactory.hpp~  Uncopyable.hpp  bite  main.cpp
src/EventManager/: EventManager.hpp
src/component/: BoxCollider.cpp  BoxCollider.hh  Component.hh  Component.hpp  Renderer.cpp  Renderer.hh  Renderer3D.cpp  Renderer3D.hh  RendererCamera.cpp  RendererCamera.hh  Transform.cpp  Transform.hh
src/ecs/: ComponentManager.cpp  ComponentManager.hpp  ContextManager.cpp  ContextManager.hpp  EntityManager.cpp  EntityManager.hpp  EventManager.hpp  EventManager.hpp~  IIdGenerator.hpp  ISystem.hpp  NumIdGenerator.hpp  ServiceLocator.hpp  SoundSystem.hpp  SystemFactory.hpp  SystemManager.cpp  SystemManager.hpp  ecs.hpp  ecs.hpp~
src/gameobject/: Camera.cpp  Camera.hh  Character.cpp  Character.hh  GameObject.cpp  GameObject.hpp  Map.cpp  Map.hh  RotatingRock.cpp  RotatingRock.hh  Wall.cpp  Wall.hh
src/indie/: EContext.hpp  Engine.hpp  InputReceiver.cpp  InputReceiver.hpp  engine.cpp  engine.hpp  registerAllContexts.cpp  registerAllContexts.hpp
src/indie/components/: #LuaScript.hpp#  Animation.hpp  BombInfo.hpp  BonusSettings.hpp  Camera.hpp  Damage.hpp  HP.hpp  Interval.hpp  Keymap.hpp  LifeNumber.hpp  LuaScript.hpp  MapSettings.hpp  Movement.hpp  Music.hpp  Music.hpp~  PlayerId.hpp  Position.hpp  PowerInfo.hpp  RemoteExplosion.hpp  Renderer3d.hpp  Respawn.hpp  Skeleton.hpp  Sound.hpp  Speed.hpp  Spreadable.hpp  TagBox.hpp  (+9 more)
src/scenes/: ScenesList.hh  test.cpp
(+84 files in other folders)
